fix: resolve image icon alignment issues within inline command buttons (#435)
* fix: resolve image icon alignment issues within inline command buttons
* fix: resolve inline command button vertical alignment issue

--- a/styles/scss/global/_inline.scss
+++ b/styles/scss/global/_inline.scss
@@ -81,7 +81,15 @@ a.inline-roll {
 }
 
 .inline {
-	display: inline-block;
+	display: inline-flex;
+	gap: 0.025em;
+	align-items: baseline;
+
+	img {
+		border: none;
+		position: relative;
+		top: 3px;
+	}
 
 	&.broken {
 		font-size: var(--font-size-14);
